Ivo/add phone controller (#137)
* Added controller as an app module